[gd_scene load_steps=21 format=3 uid="uid://dr4hyxplgk1i3"]

[ext_resource type="Script" uid="uid://b4tsmsmhacccc" path="res://Scenes/UI/AnimatedTextureRect.gd" id="1_0kbm5"]
[ext_resource type="Texture2D" uid="uid://jt26tknpri3k" path="res://Assets/Sprites/PlayerSheet.png" id="1_8g85o"]
[ext_resource type="Script" uid="uid://uxenlhbvc2mi" path="res://Scripts/UI/CharacterPersonalizationMenu.gd" id="1_jw4so"]
[ext_resource type="Texture2D" uid="uid://dqp2huygukycd" path="res://Assets/Sprites/Aura.png" id="3_mu6sa"]
[ext_resource type="Shader" uid="uid://bt2bvnojqjx08" path="res://Assets/Shaders/WhiteGlow.gdshader" id="3_ukgio"]
[ext_resource type="FontFile" uid="uid://donfw1xb4wbfa" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="4_mbk70"]

[sub_resource type="LabelSettings" id="LabelSettings_jw4so"]
font = ExtResource("4_mbk70")
font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0kbm5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vxqth"]
resource_local_to_scene = true
shader = ExtResource("3_ukgio")
shader_parameter/line_color = Color(0.187176, 0.187176, 0.187176, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_0kbm5"]
atlas = ExtResource("1_8g85o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu6sa"]
atlas = ExtResource("1_8g85o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbk70"]
atlas = ExtResource("1_8g85o")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw4so"]
atlas = ExtResource("1_8g85o")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ukgio"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kbm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu6sa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbk70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw4so")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ukgio"]
shader = ExtResource("3_ukgio")
shader_parameter/line_color = Color(0.188235, 0.188235, 0.188235, 1)
shader_parameter/line_thickness = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ukgio"]
atlas = ExtResource("3_mu6sa")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxqth"]
atlas = ExtResource("3_mu6sa")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m003h"]
atlas = ExtResource("3_mu6sa")
region = Rect2(128, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gygn0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukgio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxqth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m003h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_ukgio"]
font = ExtResource("4_mbk70")
font_size = 24

[node name="CharacterPersonalizationMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jw4so")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -281.0
offset_top = 49.0
offset_right = 281.0
offset_bottom = 119.0
grow_horizontal = 2
text = "Character customization"
label_settings = SubResource("LabelSettings_jw4so")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="CharacterAnimation" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
material = SubResource("ShaderMaterial_vxqth")
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_0kbm5")
stretch_mode = 5
script = ExtResource("1_0kbm5")
sprites = SubResource("SpriteFrames_ukgio")
autoplay = true
playing = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="AuraAnimation" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
material = SubResource("ShaderMaterial_ukgio")
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("AtlasTexture_ukgio")
stretch_mode = 5
script = ExtResource("1_0kbm5")
sprites = SubResource("SpriteFrames_gygn0")
playing = true
metadata/_custom_type_script = "uid://b4tsmsmhacccc"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_0kbm5")

[node name="LabelCharacterColor" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.5
offset_right = 210.0
offset_bottom = 13.5
grow_vertical = 2
text = "Character color"
label_settings = SubResource("LabelSettings_ukgio")
vertical_alignment = 1

[node name="CharacterColor" type="ColorPicker" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -648.0
offset_right = 264.0
grow_vertical = 0
alignment = 2
edit_alpha = false
picker_shape = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="LabelAuraColor" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -13.5
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
text = "Aura color"
label_settings = SubResource("LabelSettings_ukgio")
horizontal_alignment = 2
vertical_alignment = 1

[node name="AuraColor" type="ColorPicker" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -648.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
edit_alpha = false
picker_shape = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -47.0
offset_right = 132.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_mbk70")
theme_override_font_sizes/font_size = 28
text = "Retour à l'écran titre"
flat = true
